9ccafbca-7720-40e5-bbfb-67fde6a60f9d

--- a/index.html
+++ b/index.html
@@ -76,27 +76,27 @@
  <head></head>
  <body id="ikbw">
   <div id="ixh93" class="container-fluid">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="irufl3v">
-    <div class="col" id="i8ex6yv">
-     <nav class="navbar navbar-expand-lg navbar-light" id="i241bli">
+   <div id="irufl3v" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="i8ex6yv" class="col">
+     <nav id="i241bli" class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
        <div id="toggle-87bf5f1e-6184-43eb-8050-7ba26e765b27" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-87bf5f1e-6184-43eb-8050-7ba26e765b27" aria-controls="collapse-87bf5f1e-6184-43eb-8050-7ba26e765b27" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
-        <span class="navbar-toggler-icon" id="iq7r7xp"></span>
+        <span id="iq7r7xp" class="navbar-toggler-icon"></span>
        </div>
        <div id="collapse-87bf5f1e-6184-43eb-8050-7ba26e765b27" class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="ivwe1ea">
-         <div class="col" id="ip42714">
-          <img id="inczh7y" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="navbar-brand" id="il96n4s">D Square Solar Services</a>
+        <ul id="ivwe1ea" class="navbar-nav me-auto mb-2 mb-lg-0">
+         <div id="ip42714" class="col">
+          <img id="inczh7y" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="il96n4s" class="navbar-brand">D Square Solar Services</a>
          </div>
-         <li class="nav-item" id="incb0jt"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="nav-link active" id="i3m27wo">Home</a></li>
-         <li class="nav-item" id="irha5r8"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" class="nav-link" id="i2vry83">About Us</a></li>
-         <li class="nav-item" id="i6lb8mj"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="nav-link" id="in0bd1h">Contact Us</a></li>
-         <li class="nav-item" id="i1q05yb"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="nav-link" id="i275wzi">Products</a></li>
-         <li class="nav-item" id="iazoju1"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link" id="isjfdym">Projects</a></li>
-         <li class="nav-item dropdown" id="it7cj2t"><a href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
+         <li id="incb0jt" class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="i3m27wo" class="nav-link active">Home</a></li>
+         <li id="irha5r8" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="i2vry83" class="nav-link">About Us</a></li>
+         <li id="i6lb8mj" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="in0bd1h" class="nav-link">Contact Us</a></li>
+         <li id="i1q05yb" class="nav-item"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="i275wzi" class="nav-link">Products</a></li>
+         <li id="iazoju1" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="isjfdym" class="nav-link">Projects</a></li>
+         <li id="it7cj2t" class="nav-item dropdown"><a href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
           <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" class="dropdown-item" id="ig1wklj">O&amp;M</a></li>
-           <li><a href="#" class="dropdown-item" id="ixvfjz8">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" class="dropdown-item" id="iqicfv5">Module Cleaning</a></li>
+           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="ig1wklj" class="dropdown-item">O&amp;M</a></li>
+           <li><a href="#" id="ixvfjz8" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="iqicfv5" class="dropdown-item">Module Cleaning</a></li>
            <li></li>
            <li></li>
           </ul></li>
