--- a/module-cleaning.html
+++ b/module-cleaning.html
@@ -76,24 +76,24 @@
  <head></head>
  <body id="ifn25l">
   <div id="igzhil" class="container-fluid">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="i0w62wj">
-    <div class="col" id="iucpapj">
+   <div id="i0w62wj" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="iucpapj" class="col">
      <nav id="ilw2kj3" class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid" id="iay628l">
+      <div id="iay628l" class="container-fluid">
        <div id="toggle-322336e6-da84-44ce-a430-daedbe929b40" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-322336e6-da84-44ce-a430-daedbe929b40" aria-controls="collapse-322336e6-da84-44ce-a430-daedbe929b40" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
        </div>
        <div id="collapse-322336e6-da84-44ce-a430-daedbe929b40" class="collapse navbar-collapse">
         <ul id="i5qdr05" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <div class="col" id="i4w1wxy">
-          <img id="il5i8sd" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="navbar-brand" id="iuk6ntq">D Square Solar Services</a>
+         <div id="i4w1wxy" class="col">
+          <img id="il5i8sd" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="iuk6ntq" class="navbar-brand">D Square Solar Services</a>
          </div>
          <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ieurb5u" class="nav-link">Home</a></li>
          <li id="ikjl5cg" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="ivfc946" class="nav-link">About Us</a></li>
          <li id="ivanz1m" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="i0j606j" class="nav-link">Contact Us</a></li>
          <li id="iqe24ju" class="nav-item"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="i2dw2pk" class="nav-link">Products</a></li>
          <li id="i1e23dh" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="io44lz9" class="nav-link">Projects</a></li>
-         <li class="nav-item dropdown" id="i1hqjlb"><a href="#" id="navbarDropdown-5" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle active">Services</a>
+         <li id="i1hqjlb" class="nav-item dropdown"><a href="#" id="navbarDropdown-5" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle active">Services</a>
           <ul aria-labelledby="navbarDropdown" id="i4a2y6l" class="dropdown-menu">
            <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="igast0e" class="dropdown-item">O&amp;M</a></li>
            <li><a href="#" id="ibvt21r" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Page 5" slug="page-5" href="//webpage-webbuildershopiana.vercel.app/page-5.html" link-type="page" id="izc348d" class="dropdown-item">Module Cleaning</a></li>
@@ -101,8 +101,8 @@
            <li></li>
           </ul></li>
         </ul>
-        <form method="get" class="d-flex" id="iqzyhwe">
-         <input type="search" placeholder="Search" aria-label="Search" class="form-control me-2"><button type="submit" class="btn btn-outline-success" id="iz2zlhv">Search</button>
+        <form method="get" id="iqzyhwe" class="d-flex">
+         <input type="search" placeholder="Search" aria-label="Search" class="form-control me-2"><button type="submit" id="iz2zlhv" class="btn btn-outline-success">Search</button>
         </form>
        </div>
       </div>
@@ -110,7 +110,7 @@
     </div>
    </div>
   </div>
-  <div class="row p-2 row-cols-md-1" id="in95mqt">
+  <div id="in95mqt" class="row p-2 row-cols-md-1">
    <div class="col">
     <div id="iwog8f">
      Module Cleaning
