--- a/o&m.html
+++ b/o&m.html
@@ -85,7 +85,7 @@
        </div>
        <div id="collapse-44e93e40-3c32-4bfd-bb8d-6e38d5f54344" class="collapse navbar-collapse">
         <ul id="ifgnai" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <div class="col" id="i217613">
+         <div id="i217613" class="col">
           <img id="i9jkguv" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ia11h4" class="navbar-brand">D Square Solar Services</a>
          </div>
          <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="im9g9s" class="nav-link">Home</a></li>
