--- a/products.html
+++ b/products.html
@@ -85,8 +85,8 @@
        </div>
        <div id="collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" class="collapse navbar-collapse">
         <ul id="i5fk03a" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <div class="col" id="i2k3ddo">
-          <img id="iy1vadu" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="navbar-brand" id="iwqb1mf">D Square Solar Services</a>
+         <div id="i2k3ddo" class="col">
+          <img id="iy1vadu" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="iwqb1mf" class="navbar-brand">D Square Solar Services</a>
          </div>
          <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="iow7a2k" class="nav-link">Home</a></li>
          <li id="i6iv65a" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="i1kpf0g" class="nav-link">About Us</a></li>
