--- a/about-us.html
+++ b/about-us.html
@@ -77,7 +77,7 @@
  <body id="iwv30j">
   <div id="izjmtl" class="container-fluid">
    <div id="iefq6l" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
-    <div class="col" id="i8jx2g">
+    <div id="i8jx2g" class="col">
      <nav id="ippw8h" class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
        <div id="toggle-c589320e-8474-421c-bb7c-7f73f9e1e0ef" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-c589320e-8474-421c-bb7c-7f73f9e1e0ef" aria-controls="collapse-c589320e-8474-421c-bb7c-7f73f9e1e0ef" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
@@ -85,7 +85,7 @@
        </div>
        <div id="collapse-c589320e-8474-421c-bb7c-7f73f9e1e0ef" class="collapse navbar-collapse">
         <img id="i162ktq" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png">
-        <div class="col" id="ip7gffj">
+        <div id="ip7gffj" class="col">
          <a href="#" id="ime7rx" class="navbar-brand">D Square Solar Services</a>
         </div>
         <ul id="ijtax5" class="navbar-nav me-auto mb-2 mb-lg-0">
