--- a/contact-us.html
+++ b/contact-us.html
@@ -77,16 +77,16 @@
  <body id="iq8w0b">
   <div id="ixxdvf" class="container-fluid">
    <div id="ix1098" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
-    <div class="col" id="i0kmap">
+    <div id="i0kmap" class="col">
      <nav id="iefztd" class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid" id="i7xj9h">
+      <div id="i7xj9h" class="container-fluid">
        <div id="toggle-e7c7ecb1-769b-4512-b6e4-2112631c2dea" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-e7c7ecb1-769b-4512-b6e4-2112631c2dea" aria-controls="collapse-e7c7ecb1-769b-4512-b6e4-2112631c2dea" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
        </div>
        <div id="collapse-e7c7ecb1-769b-4512-b6e4-2112631c2dea" class="collapse navbar-collapse">
         <ul id="io78vh" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <div class="col" id="i0deo1i">
-          <img id="iyu7x0c" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="navbar-brand" id="i9nqvj">D Square Solar Services</a>
+         <div id="i0deo1i" class="col">
+          <img id="iyu7x0c" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="i9nqvj" class="navbar-brand">D Square Solar Services</a>
          </div>
          <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ivhyky" class="nav-link">Home</a></li>
          <li id="if903w" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="igrwv5" class="nav-link">About Us</a></li>
