--- a/projects.html
+++ b/projects.html
@@ -76,27 +76,27 @@
  <head></head>
  <body id="in3lu4v">
   <div id="ik1w6oa" class="container-fluid">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="iq2zmdh">
+   <div id="iq2zmdh" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
     <div class="col">
-     <nav class="navbar navbar-expand-lg navbar-light" id="iz617dg">
+     <nav id="iz617dg" class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
        <div id="toggle-68ac2786-892c-4286-8c83-03a4d3381850" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-68ac2786-892c-4286-8c83-03a4d3381850" aria-controls="collapse-68ac2786-892c-4286-8c83-03a4d3381850" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
        </div>
        <div id="collapse-68ac2786-892c-4286-8c83-03a4d3381850" class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="i7xrfb7">
-         <div class="col" id="i29nm0x">
-          <img id="i68774q" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a href="#" class="navbar-brand" id="in7su17">D Square Solar Services</a>
+        <ul id="i7xrfb7" class="navbar-nav me-auto mb-2 mb-lg-0">
+         <div id="i29nm0x" class="col">
+          <img id="i68774q" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a href="#" id="in7su17" class="navbar-brand">D Square Solar Services</a>
          </div>
-         <li class="nav-item" id="ij90pe9"><a aria-current="page" href="#" class="nav-link" id="iwxskt3">Home</a></li>
-         <li class="nav-item" id="ip50kbf"><a href="#" class="nav-link active" id="i2ijthg">About Us</a></li>
-         <li class="nav-item" id="iqy4h08"><a href="#" class="nav-link" id="ivs3tfa">Contact Us</a></li>
-         <li class="nav-item" id="itfqnan"><a href="#" class="nav-link" id="idx7q6l">Products</a></li>
-         <li class="nav-item" id="ig9qdm9"><a href="#" class="nav-link" id="ih4rzrs">Projects</a></li>
+         <li id="ij90pe9" class="nav-item"><a aria-current="page" href="#" id="iwxskt3" class="nav-link">Home</a></li>
+         <li id="ip50kbf" class="nav-item"><a href="#" id="i2ijthg" class="nav-link active">About Us</a></li>
+         <li id="iqy4h08" class="nav-item"><a href="#" id="ivs3tfa" class="nav-link">Contact Us</a></li>
+         <li id="itfqnan" class="nav-item"><a href="#" id="idx7q6l" class="nav-link">Products</a></li>
+         <li id="ig9qdm9" class="nav-item"><a href="#" id="ih4rzrs" class="nav-link">Projects</a></li>
          <li class="nav-item dropdown"><a href="#" id="navbarDropdown-7" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
-          <ul aria-labelledby="navbarDropdown" class="dropdown-menu" id="inf8zy7">
-           <li><a href="#" class="dropdown-item" id="i8bb68r">O&amp;M</a></li>
-           <li><a href="#" class="dropdown-item" id="i09ehzk">Installation</a><a href="#" class="dropdown-item" id="ips27ry">Module Cleaning</a></li>
+          <ul aria-labelledby="navbarDropdown" id="inf8zy7" class="dropdown-menu">
+           <li><a href="#" id="i8bb68r" class="dropdown-item">O&amp;M</a></li>
+           <li><a href="#" id="i09ehzk" class="dropdown-item">Installation</a><a href="#" id="ips27ry" class="dropdown-item">Module Cleaning</a></li>
            <li></li>
            <li></li>
           </ul></li>
