--- a/projects.html
+++ b/projects.html
@@ -86,17 +86,17 @@
        <div id="collapse-68ac2786-892c-4286-8c83-03a4d3381850" class="collapse navbar-collapse">
         <ul id="i7xrfb7" class="navbar-nav me-auto mb-2 mb-lg-0">
          <div id="i29nm0x" class="col">
-          <img id="i68774q" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a href="#" id="in7su17" class="navbar-brand">D Square Solar Services</a>
+          <img id="i68774q" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/logo.png"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="in7su17" class="navbar-brand">D Square Solar Services</a>
          </div>
-         <li id="ij90pe9" class="nav-item"><a aria-current="page" href="#" id="iwxskt3" class="nav-link">Home</a></li>
-         <li id="ip50kbf" class="nav-item"><a href="#" id="i2ijthg" class="nav-link active">About Us</a></li>
-         <li id="iqy4h08" class="nav-item"><a href="#" id="ivs3tfa" class="nav-link">Contact Us</a></li>
-         <li id="itfqnan" class="nav-item"><a href="#" id="idx7q6l" class="nav-link">Products</a></li>
-         <li id="ig9qdm9" class="nav-item"><a href="#" id="ih4rzrs" class="nav-link">Projects</a></li>
+         <li id="ij90pe9" class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="iwxskt3" class="nav-link">Home</a></li>
+         <li id="ip50kbf" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="i2ijthg" class="nav-link">About Us</a></li>
+         <li id="iqy4h08" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="ivs3tfa" class="nav-link">Contact Us</a></li>
+         <li id="itfqnan" class="nav-item"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="idx7q6l" class="nav-link">Products</a></li>
+         <li id="ig9qdm9" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="ih4rzrs" class="nav-link active">Projects</a></li>
          <li class="nav-item dropdown"><a href="#" id="navbarDropdown-7" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
           <ul aria-labelledby="navbarDropdown" id="inf8zy7" class="dropdown-menu">
-           <li><a href="#" id="i8bb68r" class="dropdown-item">O&amp;M</a></li>
-           <li><a href="#" id="i09ehzk" class="dropdown-item">Installation</a><a href="#" id="ips27ry" class="dropdown-item">Module Cleaning</a></li>
+           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="i8bb68r" class="dropdown-item">O&amp;M</a></li>
+           <li><a href="#" id="i09ehzk" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="ips27ry" class="dropdown-item">Module Cleaning</a></li>
            <li></li>
            <li></li>
           </ul></li>
