--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#insama3{width:70%;}#i8o5z7g{display:flex;justify-content:flex-end;}#ia2offo{width:30%;align-self:flex-end;}#i79lif3{padding:10px;font-size:42px;}#ib5smbx{padding:10px;}#ibn2043{margin:0px;padding:0px;color:rgb(0, 0, 0);font-family:"Open Sans", Arial, sans-serif;font-size:14px;text-align:justify;}#i6cap1t{color:rgb(0, 0, 0);font-family:"Open Sans", Arial, sans-serif;font-size:14px;text-align:justify;}#i5gddmk{width:50%;height:50px;color:white;background-color:#000000;border-radius:10px 10px 10px 10px;margin:10px 0 0 0;}#ikygwqi{width:70%;}#irbdxjl{width:30%;align-self:flex-end;}#i6g39ml{display:flex;justify-content:flex-end;}#i1vbnij{margin:32px 0 0 0;}#i5m0wff{color:black;width:100%;height:100%;}#iwziewi{display:flex;flex-direction:column-reverse;}#ipe4gc8{width:100%;}#ieuwtjr{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ikn9x8k{padding:10px;}#i562xup{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ihwv0bh{padding:10px;}#i4gmju3{width:100%;}#i4efy2t{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#irsb19f{padding:10px;}#iek69ej{width:100%;}#i0ppjuu{margin:32px 0 0 0;}#i4qj876{text-align:center;font-size:24px;font-weight:600;}#ih8ol0z{color:black;width:100%;height:250px;}#i9r4jfk{padding:10px;text-align:center;font-weight:600;}#i9nc3u7{color:black;width:100%;height:250px;}#i30a92k{padding:10px;text-align:center;font-weight:600;}#ir8f4wu{color:black;width:100%;height:250px;}#is1nylo{padding:10px;text-align:center;font-weight:600;}#ic7cagl{color:black;width:100%;height:250px;}#ixx83yw{padding:10px;text-align:center;font-weight:600;}#ia70upa{color:black;width:100%;height:250px;}#irncszh{padding:10px;text-align:center;font-weight:600;}#iejf2zg{color:black;width:100%;height:250px;}#iogx2gx{padding:10px;text-align:center;font-weight:600;}#ik1w6oa{padding:0px 0 0 0;}#i7xrfb7{width:100%;display:flex;justify-content:flex-end;}#i68774q{color:black;height:47.25px;}
+* { box-sizing: border-box; } body {margin: 0;}#insama3{width:70%;}#i8o5z7g{display:flex;justify-content:flex-end;}#ia2offo{width:30%;align-self:flex-end;}#i79lif3{padding:10px;font-size:42px;font-weight:600;}#ib5smbx{padding:10px;}#i5gddmk{width:50%;height:50px;color:white;background-color:#000000;border-radius:10px 10px 10px 10px;margin:10px 0 0 0;}#ikygwqi{width:70%;}#irbdxjl{width:30%;align-self:flex-end;}#i6g39ml{display:flex;justify-content:flex-end;}#i1vbnij{margin:32px 0 0 0;}#i5m0wff{color:black;width:100%;height:100%;}#iwziewi{display:flex;flex-direction:column-reverse;}#ipe4gc8{width:100%;}#ieuwtjr{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ikn9x8k{padding:10px;}#i562xup{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ihwv0bh{padding:10px;}#i4gmju3{width:100%;}#i4efy2t{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#irsb19f{padding:10px;}#iek69ej{width:100%;}#i0ppjuu{margin:32px 0 0 0;}#i4qj876{text-align:center;font-size:24px;font-weight:600;}#ih8ol0z{color:black;width:100%;height:250px;}#i9r4jfk{padding:10px;text-align:center;font-weight:600;}#i9nc3u7{color:black;width:100%;height:250px;}#i30a92k{padding:10px;text-align:center;font-weight:600;}#ir8f4wu{color:black;width:100%;height:250px;}#is1nylo{padding:10px;text-align:center;font-weight:600;}#ic7cagl{color:black;width:100%;height:250px;}#ixx83yw{padding:10px;text-align:center;font-weight:600;}#ia70upa{color:black;width:100%;height:250px;}#irncszh{padding:10px;text-align:center;font-weight:600;}#iejf2zg{color:black;width:100%;height:250px;}#iogx2gx{padding:10px;text-align:center;font-weight:600;}#ik1w6oa{padding:0px 0 0 0;}#i7xrfb7{width:100%;display:flex;justify-content:flex-end;}#i68774q{color:black;height:47.25px;}#ijwg5es{width:auto;}#i3oi1u5{width:auto;}#i6n5hqh{width:auto;}#ilkz6e9{width:auto;}#i8ed05k{width:auto;}#iz3w36g{width:auto;}@media (max-width: 576px){#i79lif3{font-size:32px;}#insama3{width:100%;}#ia2offo{width:100%;}#i5gddmk{width:40%;}#ikygwqi{width:100%;}#irbdxjl{width:100%;}#iwn06sn{display:flex;justify-content:center;}#ilkz6e9{width:50%;}#i6n5hqh{width:50%;}#i3oi1u5{width:50%;}#i8ed05k{width:50%;}#ijwg5es{width:50%;}#iz3w36g{width:50%;}}@media (max-width: 380px){#i79lif3{font-size:16px;font-weight:600;}#ib5smbx{font-size:12px;}#insama3{width:100%;}#ia2offo{width:100%;}#i5gddmk{width:35%;height:40px;}#i5m0wff{height:170.125px;}#ikygwqi{width:100%;}#i4gmju3{width:auto;}#irbdxjl{width:100%;}#iek69ej{width:auto;}#ipe4gc8{width:auto;}#ilkz6e9{width:100%;}#i6n5hqh{width:100%;}#i3oi1u5{width:100%;}#i8ed05k{width:100%;}#ijwg5es{width:100%;}#iz3w36g{width:100%;}#iwdsz7o{display:flex;flex-direction:column;}}
 
 </style>
 
@@ -81,7 +81,7 @@
      <nav id="iz617dg" class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
        <div id="toggle-68ac2786-892c-4286-8c83-03a4d3381850" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-68ac2786-892c-4286-8c83-03a4d3381850" aria-controls="collapse-68ac2786-892c-4286-8c83-03a4d3381850" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
-        <span class="navbar-toggler-icon"></span>
+        <span id="i0osf5e" class="navbar-toggler-icon"></span>
        </div>
        <div id="collapse-68ac2786-892c-4286-8c83-03a4d3381850" class="collapse navbar-collapse">
         <ul id="i7xrfb7" class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -118,7 +118,8 @@
    </div>
    <div id="ia2offo" class="col">
     <div id="ib5smbx">
-     <strong id="ibn2043">Lorem Ipsum</strong><span id="i6cap1t">&nbsp;is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</span>
+     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+     <br>
     </div><button type="button" id="i5gddmk">Contact Us</button>
    </div>
   </div>
@@ -159,48 +160,22 @@
   </div>
   <div id="i0ppjuu" class="container-fluid">
    <div id="iwn06sn" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
-    <div class="col">
+    <div id="iu2df49" class="col">
      <div id="i4qj876">
-      Our Project
+      Our Projects
      </div>
     </div>
    </div>
-   <div id="iwdsz7o" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
-    <div id="i8ed05k" class="col">
-     <div id="ixa98fi" class="col">
-      <img id="ih8ol0z" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (3).jpg">
-      <div id="i9r4jfk">
+   <div id="iwdsz7o" class="row p-2">
+    <div id="ilkz6e9" class="col-md-4">
+     <div id="iujil2g" class="col">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="iejf2zg">
+      <div id="iogx2gx">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
     </div>
-    <div id="ijwg5es" class="col">
-     <div id="inouk3k" class="col">
-      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="ir8f4wu">
-      <div id="is1nylo">
-       400 Kwp Rooftop MDSU Ajmer
-      </div>
-     </div>
-    </div>
-    <div id="iz3w36g" class="col">
-     <div id="it7999m" class="col">
-      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="i9nc3u7">
-      <div id="i30a92k">
-       400 Kwp Rooftop MDSU Ajmer
-      </div>
-     </div>
-    </div>
-   </div>
-   <div id="i7t53eq" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
-    <div id="i3oi1u5" class="col">
-     <div id="iw0w4fg" class="col">
-      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (3).jpg" id="ic7cagl">
-      <div id="ixx83yw">
-       400 Kwp Rooftop MDSU Ajmer
-      </div>
-     </div>
-    </div>
-    <div id="i6n5hqh" class="col">
+    <div id="i6n5hqh" class="col-md-4">
      <div id="iqbjoil" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="ia70upa">
       <div id="irncszh">
@@ -208,10 +183,34 @@
       </div>
      </div>
     </div>
-    <div id="ilkz6e9" class="col">
-     <div id="iujil2g" class="col">
-      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="iejf2zg">
-      <div id="iogx2gx">
+    <div id="i3oi1u5" class="col-md-4">
+     <div id="iw0w4fg" class="col">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (3).jpg" id="ic7cagl">
+      <div id="ixx83yw">
+       400 Kwp Rooftop MDSU Ajmer
+      </div>
+     </div>
+    </div>
+    <div id="i8ed05k" class="col-md-4">
+     <div id="ixa98fi" class="col">
+      <img id="ih8ol0z" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (3).jpg">
+      <div id="i9r4jfk">
+       400 Kwp Rooftop MDSU Ajmer
+      </div>
+     </div>
+    </div>
+    <div id="ijwg5es" class="col-md-4">
+     <div id="inouk3k" class="col">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="ir8f4wu">
+      <div id="is1nylo">
+       400 Kwp Rooftop MDSU Ajmer
+      </div>
+     </div>
+    </div>
+    <div id="iz3w36g" class="col-md-4">
+     <div id="it7999m" class="col">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="i9nc3u7">
+      <div id="i30a92k">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
