--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
    <div id="irufl3v" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
     <div id="i8ex6yv" class="col">
      <nav id="i241bli" class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid" id="innn">
+      <div id="innn" class="container-fluid">
        <div id="toggle-87bf5f1e-6184-43eb-8050-7ba26e765b27" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-87bf5f1e-6184-43eb-8050-7ba26e765b27" aria-controls="collapse-87bf5f1e-6184-43eb-8050-7ba26e765b27" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span id="iq7r7xp" class="navbar-toggler-icon"></span>
        </div>
