--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#insama3{width:70%;}#i8o5z7g{display:flex;justify-content:flex-end;}#ia2offo{width:30%;align-self:flex-end;}#i79lif3{padding:10px;font-size:42px;font-weight:600;}#ib5smbx{padding:10px;}#i5gddmk{width:50%;height:50px;color:white;background-color:#000000;border-radius:10px 10px 10px 10px;margin:10px 0 0 0;}#ikygwqi{width:70%;}#irbdxjl{width:30%;align-self:flex-end;}#i6g39ml{display:flex;justify-content:flex-end;}#i1vbnij{margin:32px 0 0 0;}#i5m0wff{color:black;width:100%;height:100%;}#iwziewi{display:flex;flex-direction:column-reverse;}#ipe4gc8{width:100%;}#ieuwtjr{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ikn9x8k{padding:10px;}#i562xup{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ihwv0bh{padding:10px;}#i4gmju3{width:100%;}#i4efy2t{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#irsb19f{padding:10px;}#iek69ej{width:100%;}#i0ppjuu{margin:32px 0 0 0;}#i4qj876{text-align:center;font-size:24px;font-weight:600;}#ih8ol0z{color:black;width:100%;height:250px;}#i9r4jfk{padding:10px;text-align:center;font-weight:600;}#i9nc3u7{color:black;width:100%;height:250px;}#i30a92k{padding:10px;text-align:center;font-weight:600;}#ir8f4wu{color:black;width:100%;height:250px;}#is1nylo{padding:10px;text-align:center;font-weight:600;}#ic7cagl{color:black;width:100%;height:250px;}#ixx83yw{padding:10px;text-align:center;font-weight:600;}#ia70upa{color:black;width:100%;height:250px;}#irncszh{padding:10px;text-align:center;font-weight:600;}#iejf2zg{color:black;width:100%;height:250px;}#iogx2gx{padding:10px;text-align:center;font-weight:600;}#ik1w6oa{padding:0px 0 0 0;}#i7xrfb7{width:100%;display:flex;justify-content:flex-end;}#i68774q{color:black;height:47.25px;}#ijwg5es{width:auto;}#i3oi1u5{width:auto;}#i6n5hqh{width:auto;}#ilkz6e9{width:auto;}#i8ed05k{width:auto;}#iz3w36g{width:auto;}@media (max-width: 576px){#i79lif3{font-size:32px;}#insama3{width:70%;}#ia2offo{width:100%;}#i5gddmk{width:40%;}#ikygwqi{width:100%;}#irbdxjl{width:100%;}#iwn06sn{display:flex;justify-content:center;}#ilkz6e9{width:50%;}#i6n5hqh{width:50%;}#i3oi1u5{width:50%;}#i8ed05k{width:50%;}#ijwg5es{width:50%;}#iz3w36g{width:50%;}}@media (max-width: 380px){#i79lif3{font-size:16px;font-weight:600;}#ib5smbx{font-size:12px;}#insama3{width:100%;}#ia2offo{width:100%;}#i5gddmk{width:35%;height:40px;}#i5m0wff{height:170.125px;}#ikygwqi{width:100%;}#i4gmju3{width:auto;}#irbdxjl{width:100%;}#iek69ej{width:auto;}#ipe4gc8{width:auto;}#iwdsz7o{display:flex;flex-direction:column;}#iq2zmdh{width:100%;}#i8o5z7g{width:100%;}}
+* { box-sizing: border-box; } body {margin: 0;}#insama3{width:70%;}#i8o5z7g{display:flex;justify-content:flex-end;}#ia2offo{width:30%;align-self:flex-end;}#i79lif3{padding:10px;font-size:42px;font-weight:600;}#ib5smbx{padding:10px;}#i5gddmk{width:50%;height:50px;color:white;background-color:#000000;border-radius:10px 10px 10px 10px;margin:10px 0 0 0;}#ikygwqi{width:70%;}#irbdxjl{width:30%;align-self:flex-end;}#i6g39ml{display:flex;justify-content:flex-end;}#i1vbnij{margin:32px 0 0 0;}#i5m0wff{color:black;width:100%;height:100%;}#iwziewi{display:flex;flex-direction:column-reverse;}#ipe4gc8{width:100%;}#ieuwtjr{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ikn9x8k{padding:10px;}#i562xup{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#ihwv0bh{padding:10px;}#i4gmju3{width:100%;}#i4efy2t{padding:10px;font-size:24px;font-weight:700;color:#008f13;}#irsb19f{padding:10px;}#iek69ej{width:100%;}#i0ppjuu{margin:32px 0 0 0;}#i4qj876{text-align:center;font-size:24px;font-weight:600;}#iejf2zg{color:black;width:100%;height:250px;}#iogx2gx{padding:10px;text-align:center;font-weight:600;}#ik1w6oa{padding:0px 0 0 0;}#i7xrfb7{width:100%;display:flex;justify-content:flex-end;}#i68774q{color:black;height:47.25px;}#i0x6ubm{width:100%;padding:40px 0px 40px 0px;}#iyhagpm{color:black;width:100%;height:250px;}#i89qpsq{color:black;width:100%;height:250px;}#i3eu18f{padding:10px;text-align:center;font-weight:600;}#ikvg201{padding:10px;text-align:center;font-weight:600;}#i5h7qai{color:black;width:100%;height:250px;}#imwx9ol{padding:10px;text-align:center;font-weight:600;}#izv8vu8{color:black;width:100%;height:250px;}#isy05mr{padding:10px;text-align:center;font-weight:600;}#iegms4s{color:black;width:100%;height:250px;}#ixdc5rb{padding:10px;text-align:center;font-weight:600;}@media (max-width: 576px){#i79lif3{font-size:32px;}#insama3{width:70%;}#ia2offo{width:100%;}#i5gddmk{width:40%;}#ikygwqi{width:100%;}#irbdxjl{width:100%;}#iwn06sn{display:flex;justify-content:center;}#ihyzg1d{width:50%;}#ipqdhxf{width:50%;}#ijiu1rz{width:50%;}#iesrjct{width:50%;}#ixl0eiy{width:50%;}#iwf4s43{width:50%;}}@media (max-width: 380px){#i79lif3{font-size:16px;font-weight:600;}#ib5smbx{font-size:12px;}#insama3{width:100%;}#ia2offo{width:100%;}#i5gddmk{width:35%;height:40px;}#i5m0wff{height:170.125px;}#ikygwqi{width:100%;}#i4gmju3{width:auto;}#irbdxjl{width:100%;}#iek69ej{width:auto;}#ipe4gc8{width:auto;}#iq2zmdh{width:100%;}#i8o5z7g{width:100%;}#ihyzg1d{width:100%;}#ipqdhxf{width:auto;}#ijiu1rz{width:100%;}#iesrjct{width:auto;}#ixl0eiy{width:auto;}#iwf4s43{width:auto;}#i3d7bd9{display:flex;flex-wrap:wrap;}}
 
 </style>
 
@@ -166,51 +166,41 @@
      </div>
     </div>
    </div>
-   <div id="iwdsz7o" class="row p-2">
-    <div id="ilkz6e9" class="col-md-4">
-     <div id="iujil2g" class="col">
+   <div class="col" id="i0x6ubm">
+    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="i3d7bd9">
+     <div class="col" id="ihyzg1d">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="iejf2zg">
       <div id="iogx2gx">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
-    </div>
-    <div id="i6n5hqh" class="col-md-4">
-     <div id="iqbjoil" class="col">
-      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="ia70upa">
-      <div id="irncszh">
+     <div class="col" id="ijiu1rz">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="iyhagpm">
+      <div id="ikvg201">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
-    </div>
-    <div id="i3oi1u5" class="col-md-4">
-     <div id="iw0w4fg" class="col">
-      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (3).jpg" id="ic7cagl">
-      <div id="ixx83yw">
+     <div class="col" id="ipqdhxf">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (3).jpg" id="i89qpsq">
+      <div id="i3eu18f">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
-    </div>
-    <div id="i8ed05k" class="col-md-4">
-     <div id="ixa98fi" class="col">
-      <img id="ih8ol0z" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (3).jpg">
-      <div id="i9r4jfk">
+     <div class="col" id="iesrjct">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="i5h7qai">
+      <div id="imwx9ol">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
-    </div>
-    <div id="ijwg5es" class="col-md-4">
-     <div id="inouk3k" class="col">
-      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="ir8f4wu">
-      <div id="is1nylo">
+     <div class="col" id="ixl0eiy">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="izv8vu8">
+      <div id="isy05mr">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
-    </div>
-    <div id="iz3w36g" class="col-md-4">
-     <div id="it7999m" class="col">
-      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="i9nc3u7">
-      <div id="i30a92k">
+     <div class="col" id="iwf4s43">
+      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="iegms4s">
+      <div id="ixdc5rb">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
