--- a/projects.html
+++ b/projects.html
@@ -166,39 +166,39 @@
      </div>
     </div>
    </div>
-   <div class="col" id="i0x6ubm">
-    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="i3d7bd9">
-     <div class="col" id="ihyzg1d">
+   <div id="i0x6ubm" class="col">
+    <div id="i3d7bd9" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+     <div id="ihyzg1d" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="iejf2zg">
       <div id="iogx2gx">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
-     <div class="col" id="ijiu1rz">
+     <div id="ijiu1rz" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="iyhagpm">
       <div id="ikvg201">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
-     <div class="col" id="ipqdhxf">
+     <div id="ipqdhxf" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (3).jpg" id="i89qpsq">
       <div id="i3eu18f">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
-     <div class="col" id="iesrjct">
+     <div id="iesrjct" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="i5h7qai">
       <div id="imwx9ol">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
-     <div class="col" id="ixl0eiy">
+     <div id="ixl0eiy" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="izv8vu8">
       <div id="isy05mr">
        400 Kwp Rooftop MDSU Ajmer
       </div>
      </div>
-     <div class="col" id="iwf4s43">
+     <div id="iwf4s43" class="col">
       <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="iegms4s">
       <div id="ixdc5rb">
        400 Kwp Rooftop MDSU Ajmer
