--- a/about-us.html
+++ b/about-us.html
@@ -362,18 +362,18 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
          <!-- Links -->
          <h6 class="text-uppercase fw-bold mb-4" id="i49goeu">links</h6>
-         <p><a href="#!" class="text-reset" id="i6316ss">Home</a></p>
-         <p><a href="#!" class="text-reset" id="iupwkb3">About Us</a></p>
-         <p id="i2ofz0a"><a href="#!" class="text-reset" id="ikcqdi3">Contact Us</a></p>
+         <p><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="text-reset" id="i6316ss">Home</a></p>
+         <p><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" class="text-reset" id="iupwkb3">About Us</a></p>
+         <p id="i2ofz0a"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="text-reset" id="ikcqdi3">Contact Us</a></p>
          <p></p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
          <!-- Links -->
          <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
-         <p><a href="#!" class="text-reset" id="iu2sf44">Products</a></p>
-         <p><a href="#!" class="text-reset" id="iamseql">Proejects</a></p>
-         <p><a href="#!" class="text-reset" id="imju15f">O&amp;M</a></p>
-         <p><a href="#!" class="text-reset" id="io0o7jv">Module Cleaning</a></p>
+         <p><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="text-reset" id="iu2sf44">Products</a></p>
+         <p><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="text-reset" id="iamseql">Projects</a></p>
+         <p><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" class="text-reset" id="imju15f">O&amp;M</a></p>
+         <p><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" class="text-reset" id="io0o7jv">Module Cleaning</a></p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
          <!-- Links -->
