--- a/contact-us.html
+++ b/contact-us.html
@@ -216,19 +216,19 @@
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
          <!-- Links -->
-         <h6 class="text-uppercase fw-bold mb-4" id="ihs55t">LInks</h6>
-         <p><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="text-reset" id="iisxwf">Home</a></p>
-         <p><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" class="text-reset" id="ig1gtm">About Us</a></p>
-         <p><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="text-reset" id="iv68ow">Contact Us</a></p>
+         <h6 id="ihs55t" class="text-uppercase fw-bold mb-4">LInks</h6>
+         <p><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="iisxwf" class="text-reset">Home</a></p>
+         <p><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="ig1gtm" class="text-reset">About Us</a></p>
+         <p><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="iv68ow" class="text-reset">Contact Us</a></p>
          <p></p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
          <!-- Links -->
          <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
-         <p id="ij9tm6"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="text-reset" id="i72gwm">Products</a></p>
-         <p><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="text-reset" id="iwzybm">Projects</a></p>
-         <p><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" class="text-reset" id="idlmzp">O&amp;M</a></p>
-         <p><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" class="text-reset" id="i69qr2">Module Cleaning</a></p>
+         <p id="ij9tm6"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="i72gwm" class="text-reset">Products</a></p>
+         <p><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="iwzybm" class="text-reset">Projects</a></p>
+         <p><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="idlmzp" class="text-reset">O&amp;M</a></p>
+         <p><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="i69qr2" class="text-reset">Module Cleaning</a></p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
          <!-- Links -->
