--- a/projects.html
+++ b/projects.html
@@ -235,7 +235,7 @@
      <section>
       <div class="container text-center text-md-start mt-5">
        <!-- Grid row -->
-       <div class="row mt-3" id="isxbqhf">
+       <div id="isxbqhf" class="row mt-3">
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
          <!-- Content -->
@@ -244,19 +244,19 @@
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
          <!-- Links -->
-         <h6 class="text-uppercase fw-bold mb-4" id="ixz2r4u">Links</h6>
-         <p id="ifae549"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="text-reset" id="ij5qo03">Home</a></p>
-         <p><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" class="text-reset" id="i82vgff">About Us</a></p>
-         <p><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="text-reset" id="if8cfoc">Contact Us</a></p>
+         <h6 id="ixz2r4u" class="text-uppercase fw-bold mb-4">Links</h6>
+         <p id="ifae549"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ij5qo03" class="text-reset">Home</a></p>
+         <p><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="i82vgff" class="text-reset">About Us</a></p>
+         <p><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="if8cfoc" class="text-reset">Contact Us</a></p>
          <p></p>
         </div><!-- Grid column --><!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" id="io6n5ya">
+        <div id="io6n5ya" class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
          <!-- Links -->
          <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
-         <p><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="text-reset" id="il0rn88">Products&nbsp;</a></p>
-         <p><a href="#!" class="text-reset" id="ipw0axm">Projects</a></p>
-         <p><a href="#!" class="text-reset" id="ifx08tm">O&amp;M</a></p>
-         <p><a href="#!" class="text-reset" id="i6kkyvn">Module Cleaning</a></p>
+         <p><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="il0rn88" class="text-reset">Products&nbsp;</a></p>
+         <p><a href="#!" id="ipw0axm" class="text-reset">Projects</a></p>
+         <p><a href="#!" id="ifx08tm" class="text-reset">O&amp;M</a></p>
+         <p><a href="#!" id="i6kkyvn" class="text-reset">Module Cleaning</a></p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
          <!-- Links -->
