--- a/o&m.html
+++ b/o&m.html
@@ -262,9 +262,9 @@
     </div>
    </div>
   </div>
-  <div class="container" id="i4zbhpk">
+  <div id="i4zbhpk" class="container">
    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
-    <footer class="text-center text-lg-start text-muted w-100" id="iciak9f">
+    <footer id="iciak9f" class="text-center text-lg-start text-muted w-100">
      <!-- Section: Social media -->
      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
@@ -294,24 +294,24 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
          <!-- Content -->
-         <h6 class="text-uppercase fw-bold mb-4" id="it3uv0s"><i class="fas fa-gem me-3"></i>d square solar services</h6>
+         <h6 id="it3uv0s" class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-3"></i>d square solar services</h6>
          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
          <!-- Links -->
-         <h6 class="text-uppercase fw-bold mb-4" id="i1r3yka">Links</h6>
-         <p><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="text-reset" id="io3narf">Home</a></p>
-         <p><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" class="text-reset" id="iawdfz4">About Us</a></p>
-         <p><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="text-reset" id="ii3jnui">Contact Us</a></p>
+         <h6 id="i1r3yka" class="text-uppercase fw-bold mb-4">Links</h6>
+         <p><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="io3narf" class="text-reset">Home</a></p>
+         <p><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="iawdfz4" class="text-reset">About Us</a></p>
+         <p><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="ii3jnui" class="text-reset">Contact Us</a></p>
          <p></p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
          <!-- Links -->
          <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
-         <p><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="text-reset" id="ijtzqus">Products</a></p>
-         <p><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="text-reset" id="i58t2m8">Projects</a></p>
-         <p><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" class="text-reset" id="ilc8bfj">O&amp;M</a></p>
-         <p><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" class="text-reset" id="ij2jica">Module Cleaning</a></p>
+         <p><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" id="ijtzqus" class="text-reset">Products</a></p>
+         <p><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="i58t2m8" class="text-reset">Projects</a></p>
+         <p><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="ilc8bfj" class="text-reset">O&amp;M</a></p>
+         <p><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="ij2jica" class="text-reset">Module Cleaning</a></p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
          <!-- Links -->
