--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
    <div id="irmikv9" class="row row-cols-1 row-cols-sm-2 row-cols-md-2">
     <div id="iclircu" class="col">
      <div id="invlm27" class="div">
-      <img id="i8gjwhi" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/How Solar Panels Work on Cloudy Days _ SunPower Solar Blog (1).jpeg">
+      <img id="i8gjwhi" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/3 Reasons Why Solar Isn't the New Subprime _ The Motley Fool.jpeg">
      </div>
     </div>
     <div id="i8rriho" class="col">
