--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <div id="iuh6ahq" class="col">
      <img id="idda1zp" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/clipboard.png">
      <div id="iu7eu2p">
-      Online Ordering
+      O&amp;M
      </div>
      <div id="i4g0ehc">
       Consectuar adpisicing left elit, sed do eiusm od tempor.
@@ -375,7 +375,7 @@
     <div id="i2m39yf" class="col">
      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/protection (1).png" id="i11tqep">
      <div id="idui3lg">
-      Buyer Protection
+      Module Cleaning
      </div>
      <div id="i77c0xv">
       Consectuar adpisicing left elit, sed do eiusm od tempor.
@@ -389,7 +389,7 @@
     <div id="if064my" class="col">
      <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/headset.png" id="i4b2wsi">
      <div id="iv27njw">
-      Customer Support
+      Installation
      </div>
      <div id="iyx94ev">
       Consectuar adpisicing left elit, sed do eiusm od tempor.
