--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
        </div>
        <div id="collapse-e61e6ca7-84dc-4f60-b42c-e7a216f4fa68" class="collapse navbar-collapse">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="imlshlk">
-         <li class="nav-item" id="is0sh91"><a aria-current="page" href="#" class="nav-link active" id="ibpd9mo">Home</a></li>
+         <li class="nav-item" id="is0sh91"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" class="nav-link active" id="ibpd9mo">Home</a></li>
          <li class="nav-item" id="ixop3mk"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" class="nav-link active" id="iamxh3k">Projects<br></a></li>
          <li class="nav-item" id="iixq9jt"><a aria-current="page" href="#" class="nav-link active" id="imad18w">Contact</a></li>
         </ul>
