--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <ul id="i8055gt" class="navbar-nav mb-2 mb-lg-0">
          <li class="nav-item"></li>
          <li class="nav-item"></li>
-         <li id="iz3k2oh" class="nav-item"><a aria-current="page" href="#" id="iit5nk3" class="nav-link active">Home</a></li>
+         <li id="iz3k2oh" class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="iit5nk3" class="nav-link active">Home</a></li>
          <li id="i5b0x6q" class="nav-item"><a page="page://AHft5gGWMWiGQP5fJZ4CD5" name="Projects" slug="projects" href="//webpage-webbuildershopiana.vercel.app/projects.html" link-type="page" id="ib1nrt3" class="nav-link active">Projects</a></li>
          <li id="i9sbvtu" class="nav-item"><a aria-current="page" href="#" id="itobp7l" class="nav-link active">Contact</a></li>
         </ul>
